# fenix

./: README.md  default.nix  flake.lock.nix  flake.nix  overlay.nix  packages.nix  system.nix  test  toolchains.json  toolchains.nix  update
.github/: dependabot.yml
.github/worflows/: update.yml
.github/workflows/: ci.yml  merge-staging.yml  monthly.yml  pr.yml  update.yml
data/: beta.json  beta.toml  nightly.json  stable.json  stable.toml
lib/: combine.nix  mk-toolchain.nix  overlay.nix  toolchains.json  toolchains.nix
templates/: README.md
templates/wasm/: .gitignore  Cargo.toml  default.nix  index.html  release.nix  shell.nix
templates/wasm/npins/: sources.json
templates/wasm/src/: lib.rs
