[package]
name = "fenix-wasm"
version = "0.1.0"
description = "A non-flake template for Rust WebAssembly projects using crane and fenix."
publish = false
edition = "2024"

[profile.release]
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
